[gd_scene load_steps=20 format=3 uid="uid://bevs6vkkwqdmv"]

[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_21aey"]
[ext_resource type="PackedScene" uid="uid://bu1bxbv3d7rpj" path="res://ui/settings_menu/settings_menu.tscn" id="1_b1o7r"]
[ext_resource type="StyleBox" path="style://openchamp:elements/progressbar_back" id="2_ocle2"]
[ext_resource type="StyleBox" path="style://openchamp:elements/health_fill" id="3_sb1q7"]
[ext_resource type="StyleBox" path="style://openchamp:elements/mana_fill" id="4_bdhvv"]
[ext_resource type="Script" path="res://ui/player_stats/player_stat_interface.gd" id="4_kvve8"]
[ext_resource type="Script" path="res://ui/match_timer.gd" id="7_81ipw"]
[ext_resource type="Texture2D" path="texture://openchamp:units/fallback/icon" id="9_bog4o"]
[ext_resource type="FontFile" path="font://openchamp:game_hud" id="10_6dx6a"]
[ext_resource type="Theme" path="style://openchamp:themes/default_theme" id="10_amt63"]
[ext_resource type="PackedScene" uid="uid://dk7mn6ihlcafl" path="res://ui/player_stats/item_box_base.tscn" id="13_u3smd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxhll"]
bg_color = Color(0.147672, 0.147672, 0.147672, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.121569, 0.435294, 0.494118, 1)
corner_radius_top_left = 21
corner_radius_top_right = 21
corner_radius_bottom_right = 21
corner_radius_bottom_left = 21

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_htlwm"]
bg_color = Color(0.341176, 0.537255, 0.607843, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
shadow_color = Color(0, 0, 0, 0.392157)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78qky"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.8, 0.8, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0xeg"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.98131, 0.672165, 1, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nd5bo"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0862745, 0.8, 0.8, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_em60j"]
bg_color = Color(0, 0.8, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5t84y"]
bg_color = Color(0, 0.8, 0.8, 1)
border_width_right = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3n8s"]
bg_color = Color(0, 0.8, 0.8, 1)
border_width_left = 2
border_width_right = 2
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="TestUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21aey")

[node name="SettingsMenu" parent="." instance=ExtResource("1_b1o7r")]
visible = false
layout_mode = 1

[node name="StatsInterface" type="Node" parent="."]
script = ExtResource("4_kvve8")

[node name="Minimap" type="Panel" parent="."]
layout_mode = 1
offset_left = 13.0
offset_top = 13.0
offset_right = 180.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wxhll")

[node name="GameStats" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_top = 13.0
offset_right = 213.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_htlwm")

[node name="Money" type="RichTextLabel" parent="GameStats"]
layout_mode = 0
offset_left = 35.0
offset_top = 1.0
offset_right = 90.0
offset_bottom = 23.0
theme_override_colors/default_color = Color(0.807843, 0.705882, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("10_6dx6a")
theme_override_font_sizes/normal_font_size = 12
text = "25"
scroll_active = false
autowrap_mode = 0

[node name="TimeElapsed" type="RichTextLabel" parent="GameStats"]
layout_mode = 0
offset_left = 112.0
offset_top = 1.0
offset_right = 167.0
offset_bottom = 23.0
theme = ExtResource("10_amt63")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("10_6dx6a")
text = "09:59
"
scroll_active = false
autowrap_mode = 0
script = ExtResource("7_81ipw")

[node name="Score" type="RichTextLabel" parent="GameStats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -9.0
offset_right = 27.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_amt63")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("10_6dx6a")
bbcode_enabled = true
text = "[center][color=#337cee]2[/color] vs [color=#af0101]4[/color][/center]"
scroll_active = false
autowrap_mode = 0

[node name="KDA" type="RichTextLabel" parent="GameStats"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -9.0
offset_right = -76.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("10_amt63")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("10_6dx6a")
text = "1/0/0"
scroll_active = false
autowrap_mode = 0

[node name="CS" type="RichTextLabel" parent="GameStats"]
layout_mode = 0
offset_left = 390.0
offset_top = 1.0
offset_right = 440.0
offset_bottom = 23.0
theme = ExtResource("10_amt63")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("10_6dx6a")
text = "56"
scroll_active = false
autowrap_mode = 0

[node name="AlliedPlayers" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -221.0
offset_bottom = -181.0
grow_horizontal = 0
grow_vertical = 0

[node name="OpposingPlayers" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -262.0
offset_bottom = -222.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
z_index = -1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
expand_mode = 2

[node name="CharacterUI" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.336
anchor_top = 0.867
anchor_right = 0.733
anchor_bottom = 1.0
offset_left = -0.0800171
offset_top = -0.240051
offset_right = -0.240051
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="PortraitBorder" type="Panel" parent="CharacterUI"]
z_index = 1
clip_contents = true
layout_mode = 0
offset_top = 3.0
offset_right = 80.0
offset_bottom = 83.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_78qky")

[node name="Portrait" type="TextureRect" parent="CharacterUI/PortraitBorder"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_bog4o")
expand_mode = 3

[node name="Passive" type="Panel" parent="CharacterUI"]
z_index = 2
layout_mode = 0
offset_top = 61.0
offset_right = 22.0
offset_bottom = 83.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u0xeg")

[node name="Level" type="Panel" parent="CharacterUI"]
z_index = 2
clip_contents = true
layout_mode = 0
offset_left = 60.0
offset_top = 58.0
offset_right = 85.0
offset_bottom = 83.0
mouse_default_cursor_shape = 16
theme_override_styles/panel = SubResource("StyleBoxFlat_nd5bo")

[node name="LevelNumber" type="Label" parent="CharacterUI/Level"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthMana" type="Panel" parent="CharacterUI"]
layout_mode = 0
offset_left = 76.0
offset_top = 43.0
offset_right = 338.0
offset_bottom = 83.0
theme_override_styles/panel = SubResource("StyleBoxFlat_em60j")

[node name="HealthBar" type="ProgressBar" parent="CharacterUI/HealthMana"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -34.0
offset_right = 252.0
offset_bottom = -21.0
grow_vertical = 0
theme_override_styles/background = ExtResource("2_ocle2")
theme_override_styles/fill = ExtResource("3_sb1q7")
value = 28.0
show_percentage = false

[node name="ManaBar" type="ProgressBar" parent="CharacterUI/HealthMana"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -17.0
offset_right = 252.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_styles/background = ExtResource("2_ocle2")
theme_override_styles/fill = ExtResource("4_bdhvv")
value = 67.0
show_percentage = false

[node name="Items" type="PanelContainer" parent="CharacterUI"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 338.0
offset_top = 19.0
offset_right = -5.99997
offset_bottom = -13.0001
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5t84y")

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterUI/Items"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="SpellsPanel" type="Panel" parent="CharacterUI/Items/HBoxContainer"]
custom_minimum_size = Vector2(30, 64)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_g3n8s")

[node name="SpellsContainer" type="VBoxContainer" parent="CharacterUI/Items/HBoxContainer/SpellsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -26.0
offset_right = 12.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemBoxBase" parent="CharacterUI/Items/HBoxContainer/SpellsPanel/SpellsContainer" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="ItemBoxBase2" parent="CharacterUI/Items/HBoxContainer/SpellsPanel/SpellsContainer" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="ActiveItemPanel" type="Panel" parent="CharacterUI/Items/HBoxContainer"]
custom_minimum_size = Vector2(60, 64)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_g3n8s")

[node name="ActiveItemGrid" type="GridContainer" parent="CharacterUI/Items/HBoxContainer/ActiveItemPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -20.0
offset_right = 26.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="ItemBoxBase" parent="CharacterUI/Items/HBoxContainer/ActiveItemPanel/ActiveItemGrid" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="ItemBoxBase2" parent="CharacterUI/Items/HBoxContainer/ActiveItemPanel/ActiveItemGrid" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="ItemBoxBase3" parent="CharacterUI/Items/HBoxContainer/ActiveItemPanel/ActiveItemGrid" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="ItemBoxBase4" parent="CharacterUI/Items/HBoxContainer/ActiveItemPanel/ActiveItemGrid" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="PassiveItemPanel" type="Panel" parent="CharacterUI/Items/HBoxContainer"]
custom_minimum_size = Vector2(60, 64)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_g3n8s")

[node name="PassiveItemGrid" type="GridContainer" parent="CharacterUI/Items/HBoxContainer/PassiveItemPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -20.0
offset_right = 26.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="ItemBoxBase" parent="CharacterUI/Items/HBoxContainer/PassiveItemPanel/PassiveItemGrid" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="ItemBoxBase2" parent="CharacterUI/Items/HBoxContainer/PassiveItemPanel/PassiveItemGrid" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="ItemBoxBase3" parent="CharacterUI/Items/HBoxContainer/PassiveItemPanel/PassiveItemGrid" instance=ExtResource("13_u3smd")]
layout_mode = 2

[node name="ItemBoxBase4" parent="CharacterUI/Items/HBoxContainer/PassiveItemPanel/PassiveItemGrid" instance=ExtResource("13_u3smd")]
layout_mode = 2
